hphp/hack/test/typecheck/array_cast1.php.exp
File "array_cast1.php", line 4, characters 8-17:
(array) cast forbidden in strict mode; arrays with unspecified key and value types are not allowed (Typing[4007])
