hphp/hack/test/typecheck/array_cast1.php
<?hh // strict

function foo(mixed $x): void {
  $y = (array)$x;
}
